<?xml version="1.0"?>
<package format="2">
  <name>diff_robot_control</name>
  <version>0.0.0</version>
  <description>The diff_robot_control  package</description>

  <maintainer email="af.villamil231@gmail.com">Felipe Villamil</maintainer>
  <author email="af.villamil231@gmail.com">Felipe Villamil</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>

</package>
