<?xml version="1.0"?>
<package format="2">
  <name>diff_robot_description</name>
  <version>0.0.0</version>
  <description>The diff_robot_description package</description>

  <maintainer email="af.villamil231@gmail.com">Felipe Villamil</maintainer>
  <author email="af.villamil231@gmail.com">Felipe Villamil</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
